Refactor and complete Swagger API documentation
